@@ -1,3 +1,10 @@
+2008-06-26  Joseph Myers  <joseph@codesourcery.com>
+
+	* ppc-sysv-tdep.c (ppc_sysv_abi_push_dummy_call): Handle passing
+	decimal floating-point values in GPRs for soft-float.
+	(do_ppc_sysv_return_value): Handle returning decimal
+	floating-point values in GPRs for soft-float.
+
 2008-06-26  Vladimir Prus  <vladimir@codesourcery.com>
 
 	* target.c (target_read_until_error): New.
